# QPS-CORE

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
benches/: kalman_bench.rs
proto/: qps.proto
src/: error.rs  lib.rs  main.rs  models.rs
src/anomaly/: magnetic_anomaly.rs  map_matcher.rs  mod.rs
src/api/: grpc_server.rs  handlers.rs
src/compute/: coordinate_transform.rs  mod.rs  position_computer.rs
src/filtering/: covariance.rs  kalman_filter.rs  mod.rs  state_predictor.rs
src/fusion/: mod.rs  sensor_fusion.rs  weighting.rs
src/ingestion/: kafka_consumer.rs  mod.rs  stream_handler.rs
src/storage/: mod.rs  postgres_store.rs  redis_cache.rs
src/validation/: data_validator.rs  mod.rs  quality_checker.rs
tests/: integration_tests.rs  unit_tests.rs
