[package]
name = "qps-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qps-core"
path = "src/main.rs"

[lib]
name = "qps_core"
path = "src/lib.rs"

[[bench]]
name = "kalman_bench"
harness = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Linear algebra
nalgebra = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"
dotenvy = "0.15"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full", "test-util"] }
approx = "0.5"

[build-dependencies]
tonic-build = "0.12"
